Commit homework week 3

--- a/Homework/Homework week 3 (SVG's)/SVG1/svg1.html
+++ b/Homework/Homework week 3 (SVG's)/SVG1/svg1.html
@@ -1,10 +1,13 @@
+<!-- 
+Name: Tim Molleman
+Student number: 10587306
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>SVG Map</title>
     <link rel="stylesheet" type="text/css" href="svg1.css"/>
-
-    <!-- Write your functions in main.js -->
     <script src="main1.js"></script>
   </head>
 
