--- a/Homework/D3/d3lineExtended/d3lineExtended.html
+++ b/Homework/D3/d3lineExtended/d3lineExtended.html
@@ -6,7 +6,7 @@ Studentnummer: 10587306
 <html>
 <head>
 	<title>d3line HTML</title>
-	<link rel="stylesheet" type="text/css" href="d3line.css">
+	<link rel="stylesheet" type="text/css" href="d3lineExtended.css">
   	<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
   	<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
@@ -24,6 +24,6 @@ Studentnummer: 10587306
 	</p>
 </body>
 
-<script src="d3line.js"></script>
+<script src="d3lineExtended.js"></script>
 
 </html>
