--- a/Homework/D3/d3LinkedViews/d3linked.html
+++ b/Homework/D3/d3LinkedViews/d3linked.html
@@ -2,6 +2,7 @@
 Naam: Tim Molleman
 Studentnummer: 10587306
  -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,13 +17,21 @@ Studentnummer: 10587306
 	<div style="position: relative; width: 800px; height: 40px;">
 		<h1>Number of inhabitants per country</h1>
 	</div>
+	<div id="barchart" style = "position: absolute">
+	</div>
 	<div id="full" style="position:relative; width: 800px; height:630px;">
 		<div id="container" style="position: absolute; width: 780px; height: 550px;"></div>
 	</div>
 	<div id="scatterplot" style="position: relative">
 	</div>
-	
-
+	<div style="position: relative">
+		<p> 
+		Bron voor de data: <a href="https://en.wikipedia.org/wiki/List_of_countries_and_territories_by_population_density">Wikipedia.org (zie tabel)</a>
+		</p>
+		<p>
+		Naam: Tim Molleman
+	</p>
+	</div>
 </body>
 <script src="d3linked.js"></script>
  	
